[Add] Practice Level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Practice/PracticeLevel.PracticeLevel
+EditorStartupMap=/Game/Practice/PracticeLevel.PracticeLevel
 GlobalDefaultGameMode="/Script/Unreal_LTH.Unreal_LTHGameMode"
 
 [/Script/Engine.RendererSettings]
