[Add] CPP 구현용 Level, GameMode, Character, PlayerController 추가

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TH/PracticeLevel.PracticeLevel
-EditorStartupMap=/Game/TH/PracticeLevel.PracticeLevel
-GlobalDefaultGameMode=/Game/TH/BP_MyGameMode.BP_MyGameMode_C
+GameDefaultMap=/Game/THCPP/CPPLevel.CPPLevel
+EditorStartupMap=/Game/THCPP/CPPLevel.CPPLevel
+GlobalDefaultGameMode=/Script/Engine.GameMode
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
